--- a/index.html
+++ b/index.html
@@ -4,12 +4,107 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Final-Exam-03</title>
+        <!-- tailwind and daisyUI cdn -->
         <link
             href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css"
             rel="stylesheet"
             type="text/css"
         />
         <script src="https://cdn.tailwindcss.com"></script>
+        <!-- google font Manrope -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+            rel="stylesheet"
+        />
+        <!-- tailwind custom classes -->
+        <script>
+            tailwind.config = {
+                theme: {
+                    extend: {
+                        colors: {
+                            clifford: "#da373d",
+                            "hockey-primary-btn": "#FF4240",
+                            "hockey-primary-paragraph": "#424247",
+                            "hockey-primary-title": "#131318",
+                            "hockey-primary-bg": "#FFF",
+                        },
+                    },
+                },
+            };
+        </script>
+        <!-- custom styles -->
+        <style>
+            .font-manrope {
+                font-family: "Manrope", sans-serif;
+            }
+        </style>
     </head>
-    <body></body>
+    <body class="font-manrope bg-hockey-primary-bg">
+        <header>
+            <nav>
+                <div class="navbar">
+                    <div class="navbar-start">
+                        <div class="dropdown">
+                            <div
+                                tabindex="0"
+                                role="button"
+                                class="btn btn-ghost lg:hidden"
+                            >
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="h-5 w-5"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M4 6h16M4 12h8m-8 6h16"
+                                    />
+                                </svg>
+                            </div>
+                            <ul
+                                tabindex="0"
+                                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 text-xl shadow bg-base-100 rounded-box w-52"
+                            >
+                                <li><a>Home</a></li>
+                                <li><a>About</a></li>
+                                <li><a>Pages</a></li>
+                                <li><a>Blog</a></li>
+                                <li><a>Contact</a></li>
+                            </ul>
+                        </div>
+                        <a
+                            class="btn btn-ghost text-4xl text-hockey-primary-title"
+                            >Hockey
+                            <span class="text-hockey-primary">’</span>s</a
+                        >
+                    </div>
+                    <div class="navbar-center hidden lg:flex">
+                        <ul
+                            class="menu menu-horizontal px-1 text-hockey-primary-paragraph"
+                        >
+                            <li class="text-hockey-primary-btn"><a>Home</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Pages</a></li>
+                            <li><a>Blog</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="navbar-end">
+                        <a
+                            class="btn bg-hockey-primary-btn text-hockey-primary-bg border-none"
+                            >Get Ticket</a
+                        >
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main></main>
+        <footer></footer>
+    </body>
 </html>
