our new product section created

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
                 </div>
                 <!-- Program Sections -->
                 <div class="text-center mb-20">
-                    <h3 class="text-hockey-primary-title font-extrabold mt-32">
+                    <h3
+                        class="text-hockey-primary-title text-4xl font-extrabold mt-32"
+                    >
                         Program Sections
                     </h3>
                     <p class="text-hockey-primary-paragraph mt-6">
@@ -236,13 +238,12 @@
                 <div class="flex justify-between">
                     <div class="card w-96 shadow-xl image-full">
                         <figure>
-                            <img
-                                src="./B9A3-Hockeys-main/Images/2.png"
-                                alt="Shoes"
-                            />
+                            <img src="./B9A3-Hockeys-main/Images/2.png" />
                         </figure>
                         <div class="card-body">
-                            <h2 class="card-title text-hockey-primary-bg font-bold">
+                            <h2
+                                class="card-title text-hockey-primary-bg font-bold"
+                            >
                                 Junior Program
                             </h2>
                             <p class="text-hockey-primary-bg">
@@ -260,13 +261,12 @@
                     </div>
                     <div class="card w-96 shadow-xl image-full">
                         <figure>
-                            <img
-                                src="./B9A3-Hockeys-main/Images/3.png"
-                                alt="Shoes"
-                            />
+                            <img src="./B9A3-Hockeys-main/Images/3.png" />
                         </figure>
                         <div class="card-body">
-                            <h2 class="card-title text-hockey-primary-bg font-bold">
+                            <h2
+                                class="card-title text-hockey-primary-bg font-bold"
+                            >
                                 Teenager Program
                             </h2>
                             <p class="text-hockey-primary-bg">
@@ -285,19 +285,117 @@
                 </div>
                 <div>
                     <div class="card w-full shadow-xl image-full mt-6">
-                        <figure><img src="./B9A3-Hockeys-main/Images/4.png"/></figure>
+                        <figure>
+                            <img src="./B9A3-Hockeys-main/Images/4.png" />
+                        </figure>
                         <div class="card-body">
-                          <h2 class="card-title text-hockey-primary-bg font-bold">Professional Program</h2>
-                          <p class="text-hockey-primary-bg">A Professional Program in hockey is designed for elite players, <br> offering advanced training, strategic coaching, and specialized <br> skill development to elevate performance at <br> the highest level of the sport.</p>
-                          <div class="card-actions justify-start">
-                            <button class="btn bg-hockey-primary-btn text-hockey-primary-bg border-none">Register Now!</button>
-                          </div>
+                            <h2
+                                class="card-title text-hockey-primary-bg font-bold"
+                            >
+                                Professional Program
+                            </h2>
+                            <p class="text-hockey-primary-bg">
+                                A Professional Program in hockey is designed for
+                                elite players, <br />
+                                offering advanced training, strategic coaching,
+                                and specialized <br />
+                                skill development to elevate performance at
+                                <br />
+                                the highest level of the sport.
+                            </p>
+                            <div class="card-actions justify-start">
+                                <button
+                                    class="btn bg-hockey-primary-btn text-hockey-primary-bg border-none"
+                                >
+                                    Register Now!
+                                </button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
+                </div>
+                <!-- Our New Products section -->
+                <div class="text-center">
+                    <h3
+                        class="text-hockey-primary-title text-4xl font-extrabold mt-32"
+                    >
+                        Our New Products
+                    </h3>
+                    <p class="text-hockey-primary-paragraph mt-6">
+                        Explore our latest products, blending innovation and
+                        quality for a superior experience in functionality and
+                        design.
+                    </p>
+                </div>
+                <div class="mt-24">
+                    <div class="flex gap-6">
+                        <div class="card card-side shadow-xl">
+                            <figure><img class="w-full rounded-xl" src="./B9A3-Hockeys-main/Images/5.png"/></figure>
+                            <div class="card-body">
+                              <h2 class="card-title text-hockey-primary-title text-xl font-bold">World Cup Flags Football</h2>
+                              <p class="text-hockey-primary-paragraph">World Cup Flags Football: International teams compete.</p>
+                              <div class="card-actions justify-start">
+                                <button class="text-hockey-primary-btn text-xl font-extrabold">Price - $22.00</button>
+                              </div>
+                            </div>
+                          </div>
+                        <div class="card card-side shadow-xl">
+                            <figure><img class="w-full rounded-xl" src="./B9A3-Hockeys-main/Images/6.png"/></figure>
+                            <div class="card-body">
+                              <h2 class="card-title text-hockey-primary-title text-xl font-bold">World Cup Flags Football</h2>
+                              <p class="text-hockey-primary-paragraph">World Cup Flags Football: International teams compete.</p>
+                              <div class="card-actions justify-start">
+                                <button class="text-hockey-primary-btn text-xl font-extrabold">Price - $22.00</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="flex gap-6">
+                        <div class="card card-side shadow-xl">
+                            <figure><img class="w-full rounded-xl" src="./B9A3-Hockeys-main/Images/7.png"/></figure>
+                            <div class="card-body">
+                              <h2 class="card-title text-hockey-primary-title text-xl font-bold">Cap For Hockeys</h2>
+                              <p class="text-hockey-primary-paragraph">"Hockey Caps" typically refer to protective headgear worn by players.</p>
+                              <div class="card-actions justify-start">
+                                <button class="text-hockey-primary-btn text-xl font-extrabold">Price - $22.00</button>
+                              </div>
+                            </div>
+                          </div>
+                        <div class="card card-side shadow-xl">
+                            <figure><img class="w-full rounded-xl" src="./B9A3-Hockeys-main/Images/8.png"/></figure>
+                            <div class="card-body">
+                              <h2 class="card-title text-hockey-primary-title text-xl font-bold"><T-shirt></T-shirt> For Hockeys</h2>
+                              <p class="text-hockey-primary-paragraph">A "hockey T-shirt" is a casual garment often associated with hockey teams or fans.</p>
+                              <div class="card-actions justify-start">
+                                <button class="text-hockey-primary-btn text-xl font-extrabold">Price - $22.00</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="flex gap-6">
+                        <div class="card card-side shadow-xl">
+                            <figure><img class="w-full rounded-xl" src="./B9A3-Hockeys-main/Images/9.png"/></figure>
+                            <div class="card-body">
+                              <h2 class="card-title text-hockey-primary-title text-xl font-bold">Helmet For Hockeys</h2>
+                              <p class="text-hockey-primary-paragraph">"Hockey helmet" is protective headgear essential for players.</p>
+                              <div class="card-actions justify-start">
+                                <button class="text-hockey-primary-btn text-xl font-extrabold">Price - $22.00</button>
+                              </div>
+                            </div>
+                          </div>
+                        <div class="card card-side shadow-xl">
+                            <figure><img class="w-full rounded-xl" src="./B9A3-Hockeys-main/Images/10.png"/></figure>
+                            <div class="card-body">
+                              <h2 class="card-title text-hockey-primary-title text-xl font-bold"><T-shirt></T-shirt>Ball For Hockeys</h2>
+                              <p class="text-hockey-primary-paragraph">In hockey, a "ball" is not commonly used; instead, a "puck".</p>
+                              <div class="card-actions justify-start">
+                                <button class="text-hockey-primary-btn text-xl font-extrabold">Price - $22.00</button>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
                 </div>
             </main>
             <footer></footer>
         </div>
     </body>
 </html>
- 
