--- a/index.html
+++ b/index.html
@@ -498,7 +498,10 @@
                 </div>
                 <div class="flex gap-10 mt-28">
                     <div class="w-1/2">
-                        <img class="mt-6" src="./B9A3-Hockeys-main/Images/11.png" />
+                        <img
+                            class="mt-6"
+                            src="./B9A3-Hockeys-main/Images/11.png"
+                        />
                     </div>
                     <div class="w-1/2">
                         <div class="collapse collapse-plus">
@@ -630,6 +633,112 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <!-- Get in touch section -->
+                <div class="text-center">
+                    <h3
+                        class="text-hockey-primary-title text-4xl font-extrabold mt-32"
+                    >
+                        Get In Touch
+                    </h3>
+                    <p class="text-hockey-primary-paragraph mt-6">
+                        If you need assistance or wish to get in touch regarding
+                        hockey lessons, ski touring, or any other inquiries,
+                        please specify your request or question. Whether it's
+                        about contacting a specific service provider, getting
+                        more information, or any other communication-related
+                        matter, feel free to provide more details!
+                    </p>
+                </div>
+                <div class="flex mt-16 justify-between gap-6">
+                    <div
+                        class="flex flex-col gap-6 p-6 border rounded-lg w-1/2"
+                    >
+                        <div class="card w-full bg-[#bcd36e19] shadow-xl">
+                            <div class="card-body">
+                                <img
+                                    class="w-12"
+                                    src="./B9A3-Hockeys-main/Images/Group 1171275317.png"
+                                />
+                                <p>Phone Number :</p>
+                                <div class="card-actions">
+                                    <h3
+                                        class="text-hockey-primary-title text-xl font-bold"
+                                    >
+                                        (+62) 123-321-543
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card w-full bg-[#FDDD5F19] shadow-xl">
+                            <div class="card-body">
+                                <img
+                                    class="w-12"
+                                    src="./B9A3-Hockeys-main/Images/Group 1171275318.png"
+                                />
+                                <p>Email :</p>
+                                <div class="card-actions">
+                                    <h3
+                                        class="text-hockey-primary-title text-xl font-bold"
+                                    >
+                                        hockeys@support.com
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card w-full bg-[#629CF319] shadow-xl">
+                            <div class="card-body">
+                                <img
+                                    class="w-12"
+                                    src="./B9A3-Hockeys-main/Images/Group 1171275321.png"
+                                />
+                                <p>Location :</p>
+                                <div class="card-actions">
+                                    <h3
+                                        class="text-hockey-primary-title text-xl font-bold"
+                                    >
+                                        152/1 Mohakhali Wireless Gate
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-1/2">
+                        <div class="grid grid-cols-2 gap-6">
+                            <div>
+                                <p class="text-hockey-primary-title font-bold text-xl">Your Name</p>
+                                <input type="text" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your full name"/>
+                            </div>
+                            <div>
+                                <p class="text-hockey-primary-title font-bold text-xl">Your Email</p>
+                                <input type="email" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your email"/>
+                            </div>
+                            <div>
+                                <p class="text-hockey-primary-title font-bold text-xl">Subject</p>
+                                <input type="text" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your subject"/>
+                            </div>
+                            <div>
+                                <p class="text-hockey-primary-title font-bold text-xl">Phone Number</p>
+                                <input type="number" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your phone number"/>
+                            </div>
+                        </div>
+                        <div>
+                            <p class="text-hockey-primary-title font-bold text-xl">Message</p>
+                            <textarea rows="15" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Write your message"></textarea>
+                            <button class="btn bg-hockey-primary-btn text-hockey-primary-bg font-bold border-none mt-8 w-full">Send Message</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center mt-11">
+                    <h3
+                        class="font-extrabold text-2xl text-hockey-primary-title mb-6"
+                    >
+                        Social Media
+                    </h3>
+                    <img
+                        src="./B9A3-Hockeys-main/Images/Social.svg"
+                        class="mx-auto"
+                    />
                 </div>
             </main>
             <footer></footer>
