added footer section

--- a/index.html
+++ b/index.html
@@ -706,29 +706,74 @@
                     <div class="w-1/2">
                         <div class="grid grid-cols-2 gap-6">
                             <div>
-                                <p class="text-hockey-primary-title font-bold text-xl">Your Name</p>
-                                <input type="text" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your full name"/>
+                                <p
+                                    class="text-hockey-primary-title font-bold text-xl"
+                                >
+                                    Your Name
+                                </p>
+                                <input
+                                    type="text"
+                                    class="bg-[#13131805] w-full rounded-lg p-4"
+                                    placeholder="Enter your full name"
+                                />
                             </div>
                             <div>
-                                <p class="text-hockey-primary-title font-bold text-xl">Your Email</p>
-                                <input type="email" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your email"/>
+                                <p
+                                    class="text-hockey-primary-title font-bold text-xl"
+                                >
+                                    Your Email
+                                </p>
+                                <input
+                                    type="email"
+                                    class="bg-[#13131805] w-full rounded-lg p-4"
+                                    placeholder="Enter your email"
+                                />
                             </div>
                             <div>
-                                <p class="text-hockey-primary-title font-bold text-xl">Subject</p>
-                                <input type="text" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your subject"/>
+                                <p
+                                    class="text-hockey-primary-title font-bold text-xl"
+                                >
+                                    Subject
+                                </p>
+                                <input
+                                    type="text"
+                                    class="bg-[#13131805] w-full rounded-lg p-4"
+                                    placeholder="Enter your subject"
+                                />
                             </div>
                             <div>
-                                <p class="text-hockey-primary-title font-bold text-xl">Phone Number</p>
-                                <input type="number" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Enter your phone number"/>
+                                <p
+                                    class="text-hockey-primary-title font-bold text-xl"
+                                >
+                                    Phone Number
+                                </p>
+                                <input
+                                    type="number"
+                                    class="bg-[#13131805] w-full rounded-lg p-4"
+                                    placeholder="Enter your phone number"
+                                />
                             </div>
                         </div>
                         <div>
-                            <p class="text-hockey-primary-title font-bold text-xl">Message</p>
-                            <textarea rows="15" class="bg-[#13131805] w-full rounded-lg p-4" placeholder="Write your message"></textarea>
-                            <button class="btn bg-hockey-primary-btn text-hockey-primary-bg font-bold border-none mt-8 w-full">Send Message</button>
+                            <p
+                                class="text-hockey-primary-title font-bold text-xl"
+                            >
+                                Message
+                            </p>
+                            <textarea
+                                rows="15"
+                                class="bg-[#13131805] w-full rounded-lg p-4"
+                                placeholder="Write your message"
+                            ></textarea>
+                            <button
+                                class="btn bg-hockey-primary-btn text-hockey-primary-bg font-bold border-none mt-8 w-full"
+                            >
+                                Send Message
+                            </button>
                         </div>
                     </div>
                 </div>
+                <!-- Social Media section -->
                 <div class="text-center mt-11">
                     <h3
                         class="font-extrabold text-2xl text-hockey-primary-title mb-6"
@@ -741,7 +786,70 @@
                     />
                 </div>
             </main>
-            <footer></footer>
+            
         </div>
+        <footer class="footer py-16 bg-[#131318] text-base-content mt-24">
+            <div class="w-10/12 mx-auto flex justify-between gap-6">
+                <aside class="w-1/4">
+                    <h3 class="font-extrabold text-xl text-hockey-primary-bg mb-3">
+                        Get In Touch
+                    </h3>
+                    <p>
+                        Certainly! If you have specific inquiries or need
+                        to get in touch, please provide details so I can assist
+                        you efficiently.
+                    </p>
+                    <div class="flex gap-2 mt-6">
+                        <img
+                            src="./B9A3-Hockeys-main/Images/Frame.png"
+                            class="w-6"
+                        />
+                        <p>hockeys@support.com</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <img
+                            src="./B9A3-Hockeys-main/Images/Frame (1).png"
+                            class="w-6"
+                        />
+                        <p>(+62) 123-321-543</p>
+                    </div>
+                </aside>
+                <nav class="flex flex-col">
+                    <header
+                        class="text-hockey-primary-bg font-bold mb-3"
+                    >
+                        Company
+                    </header>
+                    <a class="link link-hover">About Us</a>
+                    <a class="link link-hover">Leadership</a>
+                    <a class="link link-hover">Careers</a>
+                    <a class="link link-hover">News & Article</a>
+                    <a class="link link-hover">Legal NOtice</a>
+                </nav>
+                <nav class="flex flex-col">
+                    <header
+                        class="text-hockey-primary-bg font-bold mb-3"
+                    >
+                        Support
+                    </header>
+                    <a class="link link-hover">Help Center</a>
+                    <a class="link link-hover">FAQ</a>
+                    <a class="link link-hover">Ticket Support</a>
+                    <a class="link link-hover">Contact Us</a>
+                </nav>
+                <nav class="flex flex-col">
+                    <header
+                        class="text-hockey-primary-bg font-bold mb-3"
+                    >
+                        Services
+                    </header>
+                    <a class="link link-hover">Academy</a>
+                    <a class="link link-hover">Group Lesson</a>
+                    <a class="link link-hover">Private Lesson</a>
+                    <a class="link link-hover">Hockeys for Kids</a>
+                    <a class="link link-hover">Hockeys for Adult</a>
+                </nav>
+            </div>
+        </footer>
     </body>
 </html>
